dev/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container: nginx
      labels:
        app: nginx
    spec:
      containers:
      # sleeps forever, used to test that default-container annotations is respected
      - name: sleeper
        image: busybox
        command:
        - /bin/sh
        - -c
        - 'sleep infinity'
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
