dev/validating-admission-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: kubectl-audit-webhook
webhooks:
- name: kubectl-audit.default.svc
  rules:
  - apiGroups:   [""]
    apiVersions: ["v1"]
    resources:   ["pods/exec"]
    operations: ["*"]
    scope:       "Namespaced"
  clientConfig:
    service:
      namespace: default
      name: kubectl-audit
    # caBundle is set by `make local-config`, DO NOT change it manually.  (this contains the base64 encoded localhost cert)
    caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURLekNDQWhPZ0F3SUJBZ0lVTFNPT1BOUFRLWGlrRDA1Zmdvc3czNjhWV2k0d0RRWUpLb1pJaHZjTkFRRUwKQlFBd0pERWlNQ0FHQTFVRUF3d1phM1ZpWldOMGJDMWhkV1JwZEM1a1pXWmhkV3gwTG5OMll6QWVGdzB5TWpFdwpNamN4TXpNeE16RmFGdzB5TWpFeE1qWXhNek14TXpGYU1DUXhJakFnQmdOVkJBTU1HV3QxWW1WamRHd3RZWFZrCmFYUXVaR1ZtWVhWc2RDNXpkbU13Z2dFaU1BMEdDU3FHU0liM0RRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRREkKVno4YjdNVUdQOHZwY01jZjM3V0paRHQ2bHovNEQzYWpORGc1R0pId3JBWGJGTDYxNzZnU00rZDhDc3dWRzdhdApmMUFlRWpPRmRIc [...]
  admissionReviewVersions: ["v1"]
  sideEffects: None  # FIXME: consider using NoneOnDryRun (skip side effects if dryRun is true)
  timeoutSeconds: 5
